Informações pessoais adicionadas

--- a/Angelo W.F.Silva/como_me_vejo.html
+++ b/Angelo W.F.Silva/como_me_vejo.html
@@ -49,20 +49,24 @@
     </div>
   </menu>
 
+  <div class="content">
+    <div class="tabela">
+      <table>
+        <tr>
+          <th><img src="imgs/futuro.jpeg"  class="eu"></th>
+          <td><h1>Meus planos</h1><br>
+          <h2>
+            Faz parte dos meus planos entrar no mercado de trabalho, gosto muito da area de Dev,
+            mas sei que posso acabar me apaixonando por algo novo nesse vasto universo que é a TI. 
+            Depois de entrar no mercado, pretendo subir na empresa, e espero ser um bom profissional.
+          </h2>
+          </td>
+          </tr>
+      </table>
+    </div>
+</div>
 
 
-  <nav>
-    <h1 align="center">Como vai ser?</h1>
-    <h1>&nbsp;</h1>
-    <h1>&nbsp;</h1>
-
-    <p align="left">Eu não sou de fazer planos, muito menos de querer ser dono do meu "destino" entã eu não faço ideia
-      de como vou ser daqui a 3 ou 40 anos</p>
-    <p align="left">&nbsp;</p>
-    <p align="left">Se nada na vinha vida der certo, pretendo me tornar um bom advogado, mas por enquanto procuro formas
-      de trabalhar com midia e informática </p><img src="imgs/InstagramCapture_6415d022-1852-460a-bb44-22d6aebcd966.jpg"
-      width="612" height="612">
-  </nav>
 
   <footer>
     <h4>Angelo Werthmuller Fondello Silva </h4>
