--- a/Angelo W.F.Silva/hobbies.html
+++ b/Angelo W.F.Silva/hobbies.html
@@ -50,19 +50,39 @@
 
 
 
-    <nav>
-        <h2>&nbsp;</h2>
-        <h2> Atualmente não tenho tanto tempo livre, pois a demanda de trabalhos escolares é muito grande, porem, vou
-            registrar aqui algumas coisas que eu costumava fazer nos meus tempos livres</h2>
-        <p></p>
-        <h3 align="center">&nbsp;</h3>
-        <h3 align="center"> Eu tenho um canal no You Tube onde costumava postar videos semanais</h3>
-        <a href="https://www.youtube.com/channel/UCa1mc--7C31yMQ8AMYhQORA"><img align="center"
-                src="imgs/635907163775714957.jpg" width="288" height="240"></a>
-        <p>No pouco tempo livre que tenho,gosto de ouvir musica e assistir series, não ponho uma lista de musicas e
-            sries favoritas,pois, são muitas.
-        <p> Tambêm toco na orquestra de violões de Mongaguá.</p>
-    </nav>
+  <div class="content">
+    <div class="tabela">
+      <table>
+        <tr>
+          <th><img src="imgs/musica.jpg"  class="eu"></th>
+          <td><h1>Música</h1><br>
+          <h2>
+            Sempre fui apaixonado por ouvir música, com o tempo entrei em um curso de violão
+            onde aprendi a tocar, atualmente não toco com tanta frequencia, mas a música sempre me acompanha.
+          </h2>
+          </td>
+          </tr>
+          <tr>
+            <th><img src="imgs/game.jpg"  class="eu"></th>
+            <td><h1>Gamer</h1><br>
+            <h2>
+            Adoro jogos, atualmente gosto mais de jogos 2D, estilo plataforma, mas gosto desde RPG até FPS também.
+            </h2>
+            </td>
+          </tr>
+          <tr>
+            <th><img src="imgs/linux.jpg"  class="eu"></th>
+            <td><h1>Linux</h1><br>
+            <h2>
+            Tem algum tempo que uso Linux, e sou apaixonado por cada uma das distribuições que existem, sempre estou mudando a que uso
+            , e sempre pesquiso pelas novas, gosto de estar por dentro das news do mundo Linux
+            </h2>
+            </td>
+          </tr>
+      </table>
+    </div>
+</div>
+
 
 
     <footer>
