--- a/Angelo W.F.Silva/informatica.html
+++ b/Angelo W.F.Silva/informatica.html
@@ -47,15 +47,19 @@
 
 
 
-  <nav>
-    <p>&nbsp;</p>
-    <h1>Eu escolhi informatica pois foi a materia que eu mais me interessava, por muito tempo eu fui completamente leigo
-      no que se referia a informatica, então decidi me aprofundar no assunto, ate porque atualmente a maioria das coisas
-      é feita na base de informática </h1>
-    <p><img src="imgs/WmDev_635954397461679855.jpg" width="1200" height="1200"></p>
-    <p>Vim com o simples objetivo de fazer o curso,porem, aqui encontrei mais do que amigos, aqui é minha segunda
-      familía</p>
-  </nav>
+<div>
+  <h1>Informática</h1>
+  <br><br>
+  <h2>
+    Escolhi Informática em 2016, pois, sempre gostei de games, sempre gostei de usar o computador,
+    na época eu gostava de minecraft, e queria fazer um jogo para mim, pois, sempre via algo que faltava, ou pensava em algo novo. 
+  </h2>
+  <br><br>
+  <h2>
+    Com o tempo tive uma vontade grande de desenvolver um programa, não sabia ezatamente como ser, mas, queria ajudar
+    as pessoas, solucionar problemas, e já que me dava bem com um computador, descobri a Informática, e decidi que esse seria meu novo caminho.
+  </h2>
+</div>
 
 
   <footer>
