--- a/Angelo W.F.Silva/no_meu_nascimento.html
+++ b/Angelo W.F.Silva/no_meu_nascimento.html
@@ -49,6 +49,7 @@
     </div>
   </menu>
 
+<!--
   <nav>
     <h1>26 Dezembro 1999</h1>
     <h2>&nbsp;</h2>
@@ -59,12 +60,26 @@
     <img src="imgs/show-thumb.jpg" width="500" height="550"
       longdesc="http://free-classic-tv-shows.com/Drama/Search-for-Tomorrow/index.php">
 
-
-    <h3>&nbsp;</h3>
-    <h3>&nbsp;</h3>
-    <h3>Dez\1995 — Emancipado o município de Esperança do Sul no Rio Grande do Sul, Brasil.</h3>
+    <br><h3>Dez\1995 — Emancipado o município de Esperança do Sul no Rio Grande do Sul, Brasil.</h3>
+    <br><h3>1933 – A rádio FM é patenteada; e a empresa de produção de automóveis Nissan é organizada em Tóquio (Japão).</h3>
   </nav>
+-->
 
+<div class="content">
+  <div class="tabela">
+    <table>
+      <tr>
+        <th><img src="imgs/show-thumb.jpg" class="sft"></th>
+        <td><h2>26/Dez/1986 — A primeira telenovela de longa duração estadunidense, Search for Tomorrow, passa seu episódio final
+          após 36 anos no ar.</h2><br>
+        </td>
+    </table>
+  </div>
+  <h2>
+    <br>26/Dez/1995 — Emancipado o município de Esperança do Sul no Rio Grande do Sul, Brasil.<br>
+    <br>26/Dez/1933 – A rádio FM é patenteada; e a empresa de produção de automóveis Nissan é organizada em Tóquio (Japão).
+  </h2>
+</div>
 
   <footer>
     <h4>Alunos burros </h4>,
