--- a/Angelo W.F.Silva/origem_do_meu_nome.html
+++ b/Angelo W.F.Silva/origem_do_meu_nome.html
@@ -51,8 +51,9 @@
 
 
 
-  <nav>
-    <H1>&nbsp; </H1>
+  <div>
+    <img src="imgs/angelo.png" class="name">
+    <h1>Meu nome "Angelo", é uma variação de Ângelo.</h1><br>
     <h1>Qual o significado?</h1>
     <p>Ângelo: Significa “mensageiro”, “anjo”.
 
@@ -63,7 +64,7 @@
       da Itália após 1255 e até hoje é muito popular neste país. </p>
     <H1>&nbsp;</H1>
     <p> Em Portugal foi encontrado no Almanaque Estatístico de Lisboa na edição de 1838.</p>
-  </nav>
+  </div>
 
 
 
