--- a/Angelo W.F.Silva/pag1.html
+++ b/Angelo W.F.Silva/pag1.html
@@ -46,7 +46,7 @@
       <div class="tabela">
         <table>
           <tr>
-            <th><img src="imgs/eu.png" width="233" height="612"></th>
+            <th><img src="imgs/eu.png"  class="eu"></th>
             <td><h1>Olá meu nome é Angelo.</h1><br>
             <h2>
               Desenvolvi esse site em 2016, na minha primeira semana de curso,
