--- a/Angelo W.F.Silva/pet.html
+++ b/Angelo W.F.Silva/pet.html
@@ -33,19 +33,19 @@
   </menu>-->
   <menu>
         <div class="menu">
-          <a href="pag1.html" class="active">Home</a>
-          <a href="origem_do_meu_nome.html">Origem do meu nome</a>
-          <a href="no_meu_nascimento.html">No dia em que nasci</a>
-          <a href="pessoas.html">Família e amigos</a></li>
-          <a href="convivo.html">Moro com</a>
-          <a href="pet.html">meus péts </a>
-          <a href="hobbies.html">Hobbies</a>
-          <a href="signo.html">Meu signo</a>
-          <a href="como_me_vejo.html">Como me vejo no futuro</a>
-          <a href="informatica.html">Por que escolhi Informatica?</a>
+        <a href="pag1.html" class="active">Home</a>
+        <a href="origem_do_meu_nome.html">Origem do meu nome</a>
+        <a href="no_meu_nascimento.html">No dia em que nasci</a>
+        <a href="pessoas.html">Família e amigos</a></li>
+        <a href="convivo.html">Moro com</a>
+        <a href="pet.html">meus péts </a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="signo.html">Meu signo</a>
+        <a href="como_me_vejo.html">Como me vejo no futuro</a>
+        <a href="informatica.html">Por que escolhi Informatica?</a>
         </div>
-      </menu>
-
+</menu>
+<!--
         <nav>
                 <h1>Péts</h1>
                 <p>Kira (uma pastora alemã belga)</p>
@@ -53,6 +53,31 @@
                 <p>Ela tem quase um ano, e muita energia, é muito mansa mas assusta, pois ela gosta de pular,
                         ela adora pelucias de porco (isso é estranho) e é muito carinhosa</p>
         </nav>
+-->
+        <div class="content">
+                <div class="tabela">
+                  <table>
+                    <tr>
+                      <th><img src="imgs/WmDev_635954396486918861.jpg"  class="eu"></th>
+                      <td><h1>Kira (Uma pastora alemã belga)</h1><br>
+                      <h2>
+                        Ela tem quase um ano, e muita energia, é muito mansa, mas assusta, pois gosta de pular,
+                        adora pelucias de porco e é muito carinhosa.
+                      </h2>
+                      </td>
+                      </tr>
+                      <tr>
+                        <th><img src="imgs/axl.png"  class="eu"></th>
+                        <td><h1>Axl (O calopsita)</h1><br>
+                        <h2>
+                          Ele era bem novo quando peguei, mas não tenho certeza da idade, gosta de 
+                          comer e é meio estressado, mas no fim das contas, gosta mesmo é de um carinho atrás da orelha.
+                        </h2>
+                        </td>
+                        </tr>
+                  </table>
+                </div>
+            </div>
 
 
 
