--- a/Angelo W.F.Silva/signo.html
+++ b/Angelo W.F.Silva/signo.html
@@ -51,39 +51,40 @@
 
 
 
-  <nav>
+  <div>
     <h1>Eu nasci no dia 26 de dezembro, portanto sou capricorniano, vou falar um pouco do meu signo</h1>
-    <h1>&nbsp;</h1>
-    <h1>
-      <p>Características de Capricórnio
-
-        Pelo lado positivo, o capricorniano é ambicioso e disciplinado. É prático, prudente, tem paciência e é até
-        cauteloso quando preciso. Tem um bom senso de humor e é reservado.
-
-        Pelo lado negativo, o capricorniano tende a ser pessimista e, ante a situações difíceis, é um pouco fatalista.
-        Às vezes lhe custa ser generoso e fazer favores de forma altruísta.</p>
-      <p>&nbsp;</p>
-      <p>Capricórnio gosta
-
-        De fiabilidade, profissionalismo, uma base sólida, ter um objetivo, liderança.</p>
-      <p>&nbsp;</p>
-      <p>Capricórnio não gosta
-
-        De planos pouco práticos, fantasia, pessoas frívolas, o ridículo.</p>
-      <p>&nbsp;</p>
-      <p>Descrição de Capricórnio</p>
-      <p>&nbsp; </p>
-      <p>Capricórnio é um dos signos do zodíaco mais estáveis, seguros e calmos. São trabalhadores, responsáveis,
-        práticos e dispostos a persistir o quanto for necessário para conquistar seu objetivo. São fiáveis e muitas
-        vezes têm o papel de terminar um projeto iniciado por outro signo mais pioneiro. Adoram a música.</p>
-      <p>&nbsp;</p>
-      <p>Um capricorniano exige muito de seus empregados, familiares e amigos, mas só porque também é exigente consigo
-        mesmo. Costumam ser pessoas justas. Não estão entre os mais felizes do zodíaco, tendem mais à melancolia e ao
-        pessimismo. Quando um capricorniano sofre de depressão deve procurar ajuda. De fato, um capricorniano deve
-        sempre tentar manter uma estabilidade emocional através da meditação, respiração ou atividades que lhe ajudem a
-        relaxar e a não perder o controle de suas emoções.</p>
-    </h1>
-  </nav>
+    <table>
+      <th>
+      <img src="imgs/capricorn.jpg">
+      </th>
+      <td>
+            <h2>
+              Lado positivo, o capricorniano é ambicioso e disciplinado. É prático, prudente, tem paciência e é até
+              cauteloso quando preciso. Tem um bom senso de humor e é reservado.
+            </h2>
+            <br><br>
+            <h2>
+            lado negativo, o capricorniano tende a ser pessimista e, ante a situações difíceis, é um pouco fatalista.
+            Às vezes lhe custa ser generoso e fazer favores de forma altruísta.
+            </h2>
+        </td>
+    </table>
+            <h1>Descrição de Capricórnio</h1>
+            <br><br>
+            <h2>
+            Capricórnio é um dos signos do zodíaco mais estáveis, seguros e calmos. São trabalhadores, responsáveis,
+            práticos e dispostos a persistir o quanto for necessário para conquistar seu objetivo. São fiáveis e muitas
+            vezes têm o papel de terminar um projeto iniciado por outro signo mais pioneiro. Adoram a música. 
+            </h2>
+            <br><br>
+            <h2>
+            Um capricorniano exige muito de seus empregados, familiares e amigos, mas só porque também é exigente consigo
+            mesmo. Costumam ser pessoas justas. Não estão entre os mais felizes do zodíaco, tendem mais à melancolia e ao
+            pessimismo. Quando um capricorniano sofre de depressão deve procurar ajuda. De fato, um capricorniano deve
+            sempre tentar manter uma estabilidade emocional através da meditação, respiração ou atividades que lhe ajudem a
+            relaxar e a não perder o controle de suas emoções.
+          </h2>
+  </div>
 
 
 
